fix: add breakpoint for gap in hero content

--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -36,8 +36,12 @@
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
-    gap: 80px;
+    gap: 48px;
     color: $secondary-text;
+
+    @include mq(tablet) {
+      gap: 80px;
+    }
   }
 
   &_title {
